--- a/index.html
+++ b/index.html
@@ -13,9 +13,81 @@
             <div id="content">
                 <h2>Abstract</h2>
                 <p>Recently, there have been significant advancements in voice conversion, resulting in high-quality performance. However, there are still two critical challenges in this field. Firstly, current voice conversion methods have limited robustness when encountering unseen speakers. Secondly, they also have limited ability to control timbre representation. To address these challenges, this paper presents a novel approach leverages tokens of multi-layer residual approximations to enhance robustness when dealing with unseen speakers, called the residual speaker module. The introduction of multi-layer approximations facilitates the separation of information from the timbre, enabling effective control over timbre in voice conversion. The proposed method outperforms baselines in both subjective and objective evaluations, demonstrating superior performance and increased robustness.</p>
-                <img src="assets/arch.png" alt="model framework">
+                <img src="imgs/fig1.png" alt="Framework of the voice conversion and speaker representation control">
                 <h2>Demo</h2>
-                <p>todo...</p>
+                    <h3>Source</h3>
+                    <audio src="audios/gt/p225_002.wav" controls></audio>
+                    <br>
+                    <table>
+                        <tr>
+                            <th>Target</th>
+                            <td><audio src="audios/gt/14_208_000042_000000.wav" controls></audio></td>
+                            <td><audio src="audios/gt/17_363_000005_000000.wav" controls></audio></td>
+                        </tr>
+                        <tr>
+                            <th>P01</th>
+                            <td><audio src="audios/rsm/p225_002.14_208_000042_000000.wav" controls></audio></td>
+                            <td><audio src="audios/rsm/p225_002.17_363_000005_000000.wav" controls></audio></td>
+                        </tr>
+                        <tr>
+                            <th>P02</th>
+                            <td><audio src="audios/wo/p225_002.14_208_000042_000000.wav" controls></audio></td>
+                            <td><audio src="audios/wo/p225_002.17_363_000005_000000.wav" controls></audio></td>
+                        </tr>
+                        <tr>
+                            <th>B01</th>
+                            <td><audio src="audios/s/p225_002.14_208_000042_000000.wav" controls></audio></td>
+                            <td><audio src="audios/s/p225_002.17_363_000005_000000.wav" controls></audio></td>
+                        </tr>
+                        <tr>
+                            <th>B02</th>
+                            <td><audio src="audios/s/p225_002.14_208_000042_000000.wav" controls></audio></td>
+                            <td><audio src="audios/s/p225_002.17_363_000005_000000.wav" controls></audio></td>
+                        </tr>
+                        <tr>
+                            <th>B03</th>
+                            <td><audio src="audios/gst/p225_002.14_208_000042_000000.wav" controls></audio></td>
+                            <td><audio src="audios/gst/p225_002.17_363_000005_000000.wav" controls></audio></td>
+                        </tr>
+                    </table>
+                    <h3>Source</h3>
+                    <audio src="audios/gt/p226_045.wav" controls></audio>
+                    <br>
+                    <table>
+                        <tr>
+                            <th>Target</th>
+                            <td><audio src="audios/gt/14_212_000019_000000.wav" controls></audio></td>
+                            <td><audio src="audios/gt/17_363_000014_000000.wav" controls></audio></td>
+                        </tr>
+                        <tr>
+                            <th>P01</th>
+                            <td><audio src="audios/rsm/p226_045.14_212_000019_000000.wav" controls></audio></td>
+                            <td><audio src="audios/rsm/p226_045.17_363_000014_000000.wav" controls></audio></td>
+                        </tr>
+                        <tr>
+                            <th>P02</th>
+                            <td><audio src="audios/wo/p226_045.14_212_000019_000000.wav" controls></audio></td>
+                            <td><audio src="audios/wo/p226_045.17_363_000014_000000.wav" controls></audio></td>
+                        </tr>
+                        <tr>
+                            <th>B01</th>
+                            <td><audio src="audios/s/p226_045.14_212_000019_000000.wav" controls></audio></td>
+                            <td><audio src="audios/s/p226_045.17_363_000014_000000.wav" controls></audio></td>
+                        </tr>
+                        <tr>
+                            <th>B02</th>
+                            <td><audio src="audios/s/p226_045.14_212_000019_000000.wav" controls></audio></td>
+                            <td><audio src="audios/s/p226_045.17_363_000014_000000.wav" controls></audio></td>
+                        </tr>
+                        <tr>
+                            <th>B03</th>
+                            <td><audio src="audios/gst/p226_045.14_212_000019_000000.wav" controls></audio></td>
+                            <td><audio src="audios/gst/p226_045.17_363_000014_000000.wav" controls></audio></td>
+                        </tr>
+                    </table>
+                <h2>Voice Control</h2>
+                <img src="imgs/fig2.png" alt="Mel-spectrogram of synthesized speech after replacing speaker representations extracted by RSM layer by layer">
+                <p>Todo...</p>
             </div>
         </div>
     </div>
