--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <h2>Abstract</h2>
                 <p>Recently, there have been significant advancements in voice conversion, resulting in high-quality performance. However, there are still two critical challenges in this field. Firstly, current voice conversion methods have limited robustness when encountering unseen speakers. Secondly, they also have limited ability to control timbre representation. To address these challenges, this paper presents a novel approach leverages tokens of multi-layer residual approximations to enhance robustness when dealing with unseen speakers, called the residual speaker module. The introduction of multi-layer approximations facilitates the separation of information from the timbre, enabling effective control over timbre in voice conversion. The proposed method outperforms baselines in both subjective and objective evaluations, demonstrating superior performance and increased robustness.</p>
                 <img src="imgs/fig1.png" alt="Framework of the voice conversion and speaker representation control">
-                <h2>Demo</h2>
+                <h2>Voice Conversion</h2>
                 <div class="center">      
                     <table class="triline">
                         <thead>
@@ -36,11 +36,11 @@
                             <td>Replace speaker encoder in FreeVC with GST.</td>
                         </tr>
                         <tr>
-                            <td>P01</td>
+                            <td>P01 (Ours)</td>
                             <td>Replace speaker encoder in FreeVC with 4 layers RSM. </td>
                         </tr>
                         <tr>
-                            <td>P02</td>
+                            <td>P02 (Ours)</td>
                             <td>Ablation study for P01, RSM without residual connections.</td>
                         </tr>
                     </table>
@@ -56,12 +56,12 @@
                             <td><audio src="audios/gt/17_363_000005_000000.wav" controls></audio></td>
                         </tr>
                         <tr>
-                            <th>P01</th>
+                            <th>P01 (Ours)</th>
                             <td><audio src="audios/rsm/p225_002.14_208_000042_000000.wav" controls></audio></td>
                             <td><audio src="audios/rsm/p225_002.17_363_000005_000000.wav" controls></audio></td>
                         </tr>
                         <tr>
-                            <th>P02</th>
+                            <th>P02 (Ours)</th>
                             <td><audio src="audios/wo/p225_002.14_208_000042_000000.wav" controls></audio></td>
                             <td><audio src="audios/wo/p225_002.17_363_000005_000000.wav" controls></audio></td>
                         </tr>
@@ -93,19 +93,19 @@
                             <td><audio src="audios/gt/17_363_000014_000000.wav" controls></audio></td>
                         </tr>
                         <tr>
-                            <th>P01</th>
+                            <th>P01 (Ours)</th>
                             <td><audio src="audios/rsm/p226_045.14_212_000019_000000.wav" controls></audio></td>
                             <td><audio src="audios/rsm/p226_045.17_363_000014_000000.wav" controls></audio></td>
                         </tr>
                         <tr>
-                            <th>P02</th>
+                            <th>P02 (Ours)</th>
                             <td><audio src="audios/wo/p226_045.14_212_000019_000000.wav" controls></audio></td>
                             <td><audio src="audios/wo/p226_045.17_363_000014_000000.wav" controls></audio></td>
                         </tr>
                         <tr>
                             <th>B01</th>
-                            <td><audio src="audios/pretrains/p226_045.14_212_000019_000000.wav" controls></audio></td>
-                            <td><audio src="audios/pretrains/p226_045.17_363_000014_000000.wav" controls></audio></td>
+                            <td><audio src="audios/pretrain/p226_045.14_212_000019_000000.wav" controls></audio></td>
+                            <td><audio src="audios/pretrain/p226_045.17_363_000014_000000.wav" controls></audio></td>
                         </tr>
                         <tr>
                             <th>B02</th>
