--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="layout">
         <div id="main">
-            <h1 id="title">Controllable Residual Speaker Representation for Voice Conversion</h1>
+            <h1 id="title">Residual Speaker Representation for One-Shot Voice Conversion</h1>
             <div id="content">
                 <h2>Abstract</h2>
                 <p>Recently, there have been significant advancements in voice conversion, resulting in high-quality performance. However, there are still two critical challenges in this field. Firstly, current voice conversion methods have limited robustness when encountering unseen speakers. Secondly, they also have limited ability to control timbre representation. To address these challenges, this paper presents a novel approach leverages tokens of multi-layer residual approximations to enhance robustness when dealing with unseen speakers, called the residual speaker module. The introduction of multi-layer approximations facilitates the separation of information from the timbre, enabling effective control over timbre in voice conversion. The proposed method outperforms baselines in both subjective and objective evaluations, demonstrating superior performance and increased robustness.</p>
